src/test/compile-fail/unsafe-fn-called-from-safe.rs
// -*- rust -*-

unsafe fn f() { return; }

fn main() {
    f(); //~ ERROR access to unsafe function requires unsafe function or block
}
